# System-analyzer

./: .dockerignore  .gitignore  docker-compose.yml  requirements.txt
backend/: Dockerfile  README.md  analyzer.py  api.py  collector.py  data_generator.py  database.py  main.py  predictor.py  pyproject.toml  report.py  run.py  start_backend.py  train.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ComponentCards.jsx  FlagList.jsx  HealthGauge.jsx  HistoryLog.jsx  LiveChart.jsx  ReportPanel.jsx
frontend/src/hooks/: useHealth.js  useHistory.js  useMetrics.js
